--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "dotenv": "^6.0.0",
     "hapi": "^17.5.1",
     "hapi-s3": "^0.3.1",
+    "hapi-swagger": "^9.1.1",
+    "inert": "^5.1.0",
     "mongoose": "^5.1.4",
     "nodemon": "^1.17.5",
-    "slug": "^0.9.1"
+    "slug": "^0.9.1",
+    "vision": "^5.3.2"
   }
 }
